Latest updates before switching to main for pull of previous changes...

--- a/part_2_mars_weather.ipynb
+++ b/part_2_mars_weather.ipynb
@@ -9270,29 +9270,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                  object\n",
+       "terrestrial_date    object\n",
+       "sol                 object\n",
+       "ls                  object\n",
+       "month               object\n",
+       "min_temp            object\n",
+       "pressure            object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Examine data type of each column\n"
+    "# Examine data type of each column\n",
+    "mars_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change data types for data analysis\n"
+    "# Change data types for data analysis\n",
+    "mars_df = mars_df.astype({\"terrestrial_date\": \"datetime64[ns]\",\n",
+    "                         \"sol\" : \"int64\",\n",
+    "                         \"ls\" : \"int64\", \n",
+    "                         \"month\" : \"int64\",\n",
+    "                         \"min_temp\" : \"float64\",\n",
+    "                         \"pressure\" : \"float64\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                          object\n",
+       "terrestrial_date    datetime64[ns]\n",
+       "sol                          int64\n",
+       "ls                           int64\n",
+       "month                        int64\n",
+       "min_temp                   float64\n",
+       "pressure                   float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Confirm type changes were successful by examining data types again\n"
+    "# Confirm type changes were successful by examining data types again\n",
+    "mars_df.dtypes"
    ]
   },
   {
